# hot_news_cli

./: SKILL.md  pyproject.toml
hot_news/: __init__.py  cli.py
hot_news/core/: __init__.py  http.py  loader.py  protocol.py  registry.py  runner.py
hot_news/fetchers/: __init__.py  zhihu.py
hot_news/models/: __init__.py  trend.py
tests/: test_zhihu.py
